# GalaxyBook-Firmware-Driver-CLI

./: .gitignore  BUILD.md  LICENCE  README.MD  build.sh  clean.sh  pyproject.toml  recording.sh
debian/: changelog  control  copyright
galaxybook/: __init__.py  cli.py
galaxybook/commands/: batterylimit.py  powerlid.py  recording.py
galaxybook/commands/battery/: __init__.py  health.py  info.py  limit.py  status.py  wattage.py
galaxybook/utils/: sysfs.py
scripts/: clean.sh
src/galaxybook/: cli.py
src/galaxybook/commands/: __init__.py  command.py.template  kb-backlight.py  powerlid.py  profile.py
src/galaxybook/commands/battery/: __init__.py  health.py
src/galaxybook/utils/: __init__.py  perm.py
