[project]
name = "galaxybook"
version = "0.1.2-1"
description = "Samsung GalaxyBook CLI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "argcomplete>=3.0"
]

# Entry point for your CLI
[project.scripts]
galaxybook = "galaxybook.cli:main"

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Specify source directory
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]